--- a/apm/k8s/python/agent.yaml
+++ b/apm/k8s/python/agent.yaml
@@ -7,4 +7,4 @@ monitors:
 writer:
   traceExportFormat: sapm
 
-traceEndpointUrl: "https://ingest.YOURREALMHERE.signalfx.com/v2/trace"
+traceEndpointUrl: "https://ingest.us1.signalfx.com/v2/trace"
