--- a/apm/k8s/java/java-requests-autogen-pod.yaml
+++ b/apm/k8s/java/java-requests-autogen-pod.yaml
@@ -6,19 +6,19 @@ metadata:
     app: java-requests-autogen
 spec:
   containers:
-  -  name: java-requests-autogen
-    image: docker.io/openjdk:8
-     env:
-     - name: SIGNALFX_SERVICE_NAME
-       value: java-requests-autogen
-     - name: MY_NODE_NAME
-       valueFrom:
-         fieldRef:
-           apiVersion: v1
-           fieldPath: spec.nodeName
-     - name: SIGNALFX_ENDPOINT_URL
-       value: http://$(MY_NODE_NAME):9080/v1/trace
-     command: ["/bin/sh"]
-     args: ["run-binary.sh"]
-     imagePullPolicy: Always
+  - name: java-requests-autogen
+    image: docker.io/stevelsplunk/sfx-java:latest
+    env:
+    - name: SIGNALFX_SERVICE_NAME
+      value: java-requests-autogen
+    - name: MY_NODE_NAME
+      valueFrom:
+        fieldRef:
+          apiVersion: v1
+          fieldPath: spec.nodeName
+    - name: SIGNALFX_ENDPOINT_URL
+      value: http://$(MY_NODE_NAME):9080/v1/trace
+    command: ["/bin/sh"]
+    args: ["run-binary.sh"]
+    imagePullPolicy: Always
   restartPolicy: Always
