--- a/apm/k8s/java/java-requests-autogen-pod.yaml
+++ b/apm/k8s/java/java-requests-autogen-pod.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: java-otel-reqs-autogen
+  name: k8s-java-otel-reqs-client
   labels:
-    app: java-otel-reqs-autogen
+    app: k8s-java-otel-reqs-client
 spec:
   containers:
-  - name: java-otel-reqs-autogen
+  - name: k8s-java-otel-reqs-client
     image: docker.io/stevelsplunk/sfx-java:latest
     env:
     - name: OTEL_EXPORTER_JAEGER_SERVICE_NAME
-      value: java-otel-reqs-autogen
+      value: k8s-java-otel-reqs-client
     - name: MY_NODE_NAME
       valueFrom:
         fieldRef:
