--- a/apm/k8s/java/java-requests-autogen-pod.yaml
+++ b/apm/k8s/java/java-requests-autogen-pod.yaml
@@ -1,24 +1,22 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: k8s-java-otel-reqs-client
+  name: java-requests-autogen
   labels:
-    app: k8s-java-otel-reqs-client
+    app: java-requests-autogen
 spec:
   containers:
-  - name: k8s-java-otel-reqs-client
+  - name: java-requests-autogen
     image: docker.io/stevelsplunk/sfx-java:latest
     env:
-    - name: OTEL_EXPORTER_JAEGER_SERVICE_NAME
-      value: k8s-java-otel-reqs-client
-    - name: OTEL_EXPORTER
-      value: jaeger
+    - name: SIGNALFX_SERVICE_NAME
+      value: java-requests-autogen
     - name: MY_NODE_NAME
       valueFrom:
         fieldRef:
           apiVersion: v1
           fieldPath: spec.nodeName
-    - name: OTEL_EXPORTER_JAEGER_ENDPOINT
+    - name: SIGNALFX_ENDPOINT_URL
       value: http://$(MY_NODE_NAME):9080/v1/trace
     command: ["/bin/sh"]
     args: ["run-binary.sh"]
