--- a/apm/k8s/java-otel/java-requests-autogen-pod.yaml
+++ b/apm/k8s/java-otel/java-requests-autogen-pod.yaml
@@ -9,6 +9,10 @@ spec:
   - name: k8s-java-otel-reqs-client
     image: docker.io/stevelsplunk/sfx-java:latest
     env:
+    - name: OTEL_EXPORTER
+      value: jaeger
+    - name: OTEL_EXPORTER_JAEGER_SERVICE_NAME
+      value: k8s-java-otel-reqs-client
     - name: MY_NODE_NAME
       valueFrom:
         fieldRef:
