--- a/apm/k8s/java/java-otel/test-deploy.yaml
+++ b/apm/k8s/java/java-otel/test-deploy.yaml
@@ -9,8 +9,6 @@ spec:
   - name: k8s-java-otel-reqs-client
     image: docker.io/stevelsplunk/sfx-java:latest
     env:
-    - name: OTEL_EXPORTER
-      value: jaeger
     - name: OTEL_EXPORTER_JAEGER_SERVICE_NAME
       value: k8s-java-otel-reqs-client
     - name: MY_NODE_NAME
@@ -20,6 +18,8 @@ spec:
           fieldPath: spec.nodeName
     - name: OTEL_EXPORTER_JAEGER_ENDPOINT
       value: http://$(MY_NODE_NAME):9080/v1/trace
+    - name: FLASK_SERVER
+      value: http://$(MY_NODE_NAME):5000/echo
     command: [ "/bin/bash", "-c", "--" ]
     args: [ "while true; do sleep 30; done;" ]      
     imagePullPolicy: Always
