--- a/apm/k8s/java/dockerfile-java
+++ b/apm/k8s/java/dockerfile-java
@@ -1,5 +1,6 @@
-FROM openjdk:8  
-RUN apt-get update && \ 
+FROM openjdk:8-slim
+RUN apt-get update && \
+    apt-get -y install curl && \
     mkdir /home/code
 WORKDIR /home/code
 COPY . /home/code/
