--- a/apm/k8s/python-otel/flask-deployment.yaml
+++ b/apm/k8s/python-otel/flask-deployment.yaml
@@ -18,14 +18,14 @@ spec:
             - name: http
               containerPort: 5000
           env:
-            - name: SIGNALFX_SERVICE_NAME
+            - name: SPLK_SERVICE_NAME
               value: k8s-py-flask-server-otel
             - name: MY_NODE_NAME
               valueFrom:
                 fieldRef:
                   apiVersion: v1
                   fieldPath: spec.nodeName
-            - name: SIGNALFX_ENDPOINT_URL
+            - name: SPLK_TRACE_EXPORTER_URL
               value: http://$(MY_NODE_NAME):9080/v1/trace
           command:
             - /bin/sh
