--- a/apm/k8s/python/flask-deployment.yaml
+++ b/apm/k8s/python/flask-deployment.yaml
@@ -1,46 +1,46 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: flask-server
+  name: flask-server-otel
 spec:
   selector:
     matchLabels:
-      name: flask-server
+      name: flask-server-otel
   template:
     metadata:
       labels:
-        name: flask-server
+        name: flask-server-otel
     spec:
       containers:
-        - name: flask-server
-          image: 'docker.io/stevelsplunk/sfx-python:latest'
+        - name: flask-server-otel
+          image: 'docker.io/stevelsplunk/splk-python:latest'
           ports:
             - name: http
               containerPort: 5000
           env:
-            - name: SIGNALFX_SERVICE_NAME
-              value: k8s-python-flask-server
+            - name: SPLK_SERVICE_NAME
+              value: k8s-py-flask-server-otel
             - name: MY_NODE_NAME
               valueFrom:
                 fieldRef:
                   apiVersion: v1
                   fieldPath: spec.nodeName
-            - name: SIGNALFX_ENDPOINT_URL
+            - name: SPLK_TRACE_EXPORTER_URL
               value: http://$(MY_NODE_NAME):9080/v1/trace
           command:
             - /bin/sh
           args:
-            - run-server.sh
+            - run-server-otel.sh
           imagePullPolicy: Always
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: flask-server
+  name: flask-server-otel
 spec:
   selector:
-    name: flask-server
+    name: flask-server-otel
   ports:
   - protocol: TCP
     port: 5000
