--- a/apm/java-wip/pom.xml
+++ b/apm/java-wip/pom.xml
@@ -41,6 +41,12 @@
       <version>0.13.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>io.opentelemetry</groupId>
+      <artifactId>opentelemetry-extension-auto-annotations</artifactId>
+      <version>0.10.0</version>
+    </dependency>	    
+
 </dependencies>
 
 </project>
