--- a/apm/k8s/java/java-otel/jmx.yaml
+++ b/apm/k8s/java/java-otel/jmx.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: k8s-java-otel-reqs-client
+  name: k8s-java-reqs-client-otel
   labels:
-    app: k8s-java-otel-reqs-client
+    app: k8s-java-reqs-client-otel
 spec:
   containers:
-  - name: k8s-java-otel-reqs-client
-    image: docker.io/stevelsplunk/sfx-java:latest
+  - name: k8s-java-reqs-client-otel
+    image: docker.io/stevelsplunk/splk-java:latest
     env:
     - name: OTEL_EXPORTER_JAEGER_SERVICE_NAME
-      value: k8s-java-otel-reqs-client
+      value: k8s-java-reqs-client-otel
     - name: MY_NODE_NAME
       valueFrom:
         fieldRef:
@@ -18,9 +18,7 @@ spec:
           fieldPath: spec.nodeName
     - name: OTEL_EXPORTER_JAEGER_ENDPOINT
       value: http://$(MY_NODE_NAME):9080/v1/trace
-    - name: FLASK_SERVER
-      value: http://$(MY_NODE_NAME):5000/echo
-    command: [ "/bin/bash", "-c", "--" ]
-    args: [ "while true; do sleep 30; done;" ]      
+    command: ["/bin/sh"]
+    args: ["./java-otel/run-java-local-flask-jmx.sh"]
     imagePullPolicy: Always
   restartPolicy: Always
