--- a/apm/k8s/java/java-otel/test.yaml
+++ b/apm/k8s/java/java-otel/test.yaml
@@ -1,24 +1,45 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: k8s-java-reqs-client-otel
-  labels:
-    app: k8s-java-reqs-client-otel
 spec:
-  containers:
-  - name: k8s-java-reqs-client-otel
-    image: docker.io/stevelsplunk/splk-java:latest
-    env:
-    - name: OTEL_EXPORTER_JAEGER_SERVICE_NAME
-      value: k8s-java-reqs-client-otel
-    - name: MY_NODE_NAME
-      valueFrom:
-        fieldRef:
-          apiVersion: v1
-          fieldPath: spec.nodeName
-    - name: OTEL_EXPORTER_JAEGER_ENDPOINT
-      value: http://$(MY_NODE_NAME):9080/v1/trace
-    command: [ "/bin/bash", "-c", "--" ]
-    args: [ "while true; do sleep 30; done;" ]
-    imagePullPolicy: Always
-  restartPolicy: Always
+  selector:
+    matchLabels:
+      name: k8s-java-reqs-client-otel
+  template:
+    metadata:
+      labels:
+        name: k8s-java-reqs-client-otel
+    spec:
+      containers:
+        - name: k8s-java-reqs-client-otel
+          image: 'docker.io/stevelsplunk/splk-java:latest'
+          ports:
+            - name: http
+              containerPort: 3000
+          env:
+            - name: SPLK_SERVICE_NAME
+              value: OTEL_EXPORTER_JAEGER_SERVICE_NAME
+            - name: MY_NODE_NAME
+              valueFrom:
+                fieldRef:
+                  apiVersion: v1
+                  fieldPath: spec.nodeName
+            - name: OTEL_EXPORTER_JAEGER_ENDPOINT
+              value: http://$(MY_NODE_NAME):9080/v1/trace
+          command: [ "/bin/bash", "-c", "--" ]
+          args: [ "while true; do sleep 30; done;" ]
+          imagePullPolicy: Always
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: k8s-java-reqs-client-otel
+spec:
+  selector:
+    name: k8s-java-reqs-client-otel
+  ports:
+  - protocol: TCP
+    port: 3000
+    targetPort: 3000
