--- a/apm/k8s/java/java-otel/jmx/agent.yaml
+++ b/apm/k8s/java/java-otel/jmx/agent.yaml
@@ -10,3 +10,7 @@ monitors:
           table: false
           instancePrefix: jvm.threads.count
           attribute: ThreadCount
+  - type: jmx
+    host: k8s-java-reqs-client-otel
+    port: 3000 # NOT RMI port, Remote JMX Port
+    groovyScript: {"#from": "/home/code/java-otel/jmx/deadlockedThreads.groovy", raw: true}
