--- a/apm/k8s/java/java-otel/tools/dockerfile-java
+++ b/apm/k8s/java/java-otel/tools/dockerfile-java
@@ -3,4 +3,4 @@ RUN apt-get update && \
     apt-get -y install curl && \
     mkdir /home/code
 WORKDIR /home/code
-COPY . /home/code/
+COPY .. /home/code/
