--- a/apm/k8s/java/manual-inst/pom.xml
+++ b/apm/k8s/java/manual-inst/pom.xml
@@ -49,4 +49,19 @@
 
 </dependencies>
 
+<build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.8.1</version>
+      <configuration>
+        <compilerargs>
+          <arg>-Xlint</arg>
+        </compilerargs>
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
+
 </project>
