--- a/apm/k8s/values.yaml
+++ b/apm/k8s/values.yaml
@@ -9,6 +9,10 @@ ingestUrl: https://ingest.YOURREALMHERE.signalfx.com
 traceEndpointUrl: https://ingest.YOURREALMHERE.signalfx.com/v2/trace
 
 monitors:
+  monitors:
+  - type: collectd/genericjmx
+    host: k8s-java-reqs-client-otel
+    port: 3000
   - type: signalfx-forwarder
     listenAddress: 0.0.0.0:9080
     defaultSpanTags:
