--- a/apm/k8s/java/manual-inst/wipold/pom.xml
+++ b/apm/k8s/java/manual-inst/wipold/pom.xml
@@ -23,4 +23,30 @@
       <version>0.13.1</version>
     </dependency>
 </dependencies>
+
+ <build>
+	     <plugins>
+		           <plugin>
+				           <groupId>org.apache.maven.plugins</groupId>
+						           <artifactId>maven-shade-plugin</artifactId>
+								           <version>3.2.4</version>
+										           <executions>
+												             <execution>
+														                 <phase>package</phase>
+																	             <goals>
+																			                   <goal>shade</goal>
+																						               </goals>
+																								                   <configuration>
+																											                 <transformers>
+																														                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+																																	                   <mainClass>sf.main.GetExample</mainClass>
+																																				                   </transformer>
+																																							                 </transformers>
+																																										             </configuration>
+																																												               </execution>
+																																														               </executions>
+																																																             </plugin>
+																																																		         </plugins>
+																																																				   </build>
+
 </project>
