--- a/apm/k8s/java/manual-inst/pom.xml
+++ b/apm/k8s/java/manual-inst/pom.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-    <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-      <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.signalfx.public</groupId>
   <artifactId>java-app</artifactId>
@@ -26,7 +27,7 @@
     </dependencies>
   </dependencyManagement>
 
-<dependencies>
+  <dependencies>
 
     <dependency>
       <groupId>io.opentelemetry</groupId>
@@ -38,19 +39,12 @@
       <artifactId>opentelemetry-context</artifactId>
     </dependency>
 
-
     <dependency>
       <groupId>io.opentelemetry</groupId>
-      <artifactId>opentelemetry-sdk</artifactId>
+      <artifactId>opentelemetry-extension-annotations</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>io.opentelemetry</groupId>
-      <artifactId>opentelemetry-extension-auto-annotations</artifactId>
-      <version>0.10.0</version>
-    </dependency>	    
-
-</dependencies>
+  </dependencies>
 
   <build>
     <plugins>
@@ -66,7 +60,8 @@
             </goals>
             <configuration>
               <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                <transformer
+                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>sf.main.GetExample</mainClass>
                 </transformer>
               </transformers>
