--- a/apm/k8s/java/tools/test.yaml
+++ b/apm/k8s/java/tools/test.yaml
@@ -19,7 +19,7 @@ spec:
               containerPort: 3000
           env:
             - name: SPLK_SERVICE_NAME
-              value: OTEL_EXPORTER_JAEGER_SERVICE_NAME
+              value: test
             - name: MY_NODE_NAME
               valueFrom:
                 fieldRef:
