--- a/apm/k8s/otel-collector/otel-collector-k8s.yaml
+++ b/apm/k8s/otel-collector/otel-collector-k8s.yaml
@@ -124,9 +124,9 @@ spec:
             memory: 400Mi
         env:
         - name: SFX_REALM
-          value: "YOURREALMHERE"
+          value: us1
         - name: SFX_TOKEN
-          value: "YOURTOKENHERE"
+          value: iggr1oMNzzoIbvsfjGq90Q
         ports:
         - containerPort: 55679 # Default endpoint for ZPages.
         - containerPort: 55680 # Default endpoint for OpenTelemetry receiver.
