--- a/apm/k8s/java/java-reqs-jmx-deployment.yaml
+++ b/apm/k8s/java/java-reqs-jmx-deployment.yaml
@@ -1,25 +1,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: java-client-otel
+  name: java-client-otel-k8s
 spec:
   selector:
     matchLabels:
-      name: java-client-otel
+      name: java-client-otel-k8s
   template:
     metadata:
       labels:
-        name: java-client-otel
+        name: java-client-otel-k8s
     spec:
       containers:
-        - name: java-client-otel
+        - name: java-client-otel-k8s
           image: 'docker.io/stevelsplunk/splk-java:latest'
           ports:
             - name: http
               containerPort: 3000
           env:
             - name: OTEL_EXPORTER_JAEGER_SERVICE_NAME
-              value: java-client-otel
+              value: java-client-otel-k8s
             - name: MY_NODE_NAME
               valueFrom:
                 fieldRef:
@@ -37,10 +37,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: java-client-otel
+  name: java-client-otel-k8s
 spec:
   selector:
-    name: java-client-otel
+    name: java-client-otel-k8s
   ports:
   - protocol: TCP
     port: 3000
