--- a/apm/k8s/python/flask-deployment.yaml
+++ b/apm/k8s/python/flask-deployment.yaml
@@ -1,25 +1,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: server-flask-otel
+  name: server-flask-otel-k8s
 spec:
   selector:
     matchLabels:
-      name: server-flask-otel
+      name: server-flask-otel-k8s
   template:
     metadata:
       labels:
-        name: server-flask-otel
+        name: server-flask-otel-k8s
     spec:
       containers:
-        - name: server-flask-otel
+        - name: server-flask-otel-k8s
           image: 'docker.io/stevelsplunk/splk-python:latest'
           ports:
             - name: http
               containerPort: 5000
           env:
             - name: SPLK_SERVICE_NAME
-              value: server-flask-otel
+              value: server-flask-otel-k8s
             - name: MY_NODE_NAME
               valueFrom:
                 fieldRef:
@@ -37,10 +37,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: server-flask-otel
+  name: server-flask-otel-k8s
 spec:
   selector:
-    name: server-flask-otel
+    name: server-flask-otel-k8s
   ports:
   - protocol: TCP
     port: 5000
