--- a/apm/k8s/values.yaml
+++ b/apm/k8s/values.yaml
@@ -10,7 +10,7 @@ traceEndpointUrl: https://ingest.YOURREALMHERE.signalfx.com/v2/trace
 
 monitors:
   - type: collectd/genericjmx
-    host: k8s-java-reqs-client-otel
+    host: java-client-otel-k8s
     port: 3000
   - type: signalfx-forwarder
     listenAddress: 0.0.0.0:9080
