--- a/apm/k8s/python/tools/test.yaml
+++ b/apm/k8s/python/tools/test.yaml
@@ -9,14 +9,14 @@ spec:
   -  name: k8s-py-test-otel
      image: docker.io/stevelsplunk/splk-python:latest
      env:
-     - name: SPLK_SERVICE_NAME
+     - name: SPLUNK_SERVICE_NAME
        value: k8s-py-test
      - name: MY_NODE_NAME
        valueFrom:
          fieldRef:
            apiVersion: v1
            fieldPath: spec.nodeName
-     - name: SPLK_TRACE_EXPORTER_URL
+     - name: SPLUNK_TRACE_EXPORTER_URL
        value: http://$(MY_NODE_NAME):9080/v1/trace
      command: [ "/bin/bash", "-c", "--" ]
      args: [ "while true; do sleep 30; done;" ]
