--- a/apm/k8s/python/python-requests-pod-otel.yaml
+++ b/apm/k8s/python/python-requests-pod-otel.yaml
@@ -9,14 +9,14 @@ spec:
   -  name: client-py-otel-k8s
      image: docker.io/stevelsplunk/splk-python:latest
      env:
-     - name: SPLK_SERVICE_NAME
+     - name: SPLUNK_SERVICE_NAME
        value: client-py-otel-k8s
      - name: MY_NODE_NAME
        valueFrom:
          fieldRef:
            apiVersion: v1
            fieldPath: spec.nodeName
-     - name: SPLK_TRACE_EXPORTER_URL
+     - name: SPLUNK_TRACE_EXPORTER_URL
        value: http://$(MY_NODE_NAME):9080/v1/trace
      command: ["/bin/sh"]
      args: ["run-client-k8s-otel.sh"]
