--- a/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
+++ b/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
@@ -1,7 +1,8 @@
 FROM python:slim
 RUN apt-get update && \ 
     apt install -y python3-pip && \
-    python3 -m pip install splunk-opentelemetry requests && \
+    apt install -y redis-server && \
+    python3 -m pip install splunk-opentelemetry requests redis && \
     apt -y autoremove && apt-get -y autoclean && \
     export PATH="$HOME/.local/bin:$PATH" && \
     splk-py-trace-bootstrap  && \
