--- a/apm/k8s/python/tools/test-autogen.yaml
+++ b/apm/k8s/python/tools/test-autogen.yaml
@@ -1,24 +1,44 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: k8s-py-test-otel-autogen
-  labels:
-    app: k8s-py-test-otel-autogen
+  name: test-autogen-redis-otel-k8s
 spec:
-  containers:
-  -  name: k8s-py-test-otel-autogen
-     image: docker.io/stevelsplunk/splk-python-autogen:latest
-     env:
-     - name: SPLUNK_SERVICE_NAME
-       value: k8s-py-test-autogen
-     - name: MY_NODE_NAME
-       valueFrom:
-         fieldRef:
-           apiVersion: v1
-           fieldPath: spec.nodeName
-     - name: SPLUNK_TRACE_EXPORTER_URL
-       value: http://$(MY_NODE_NAME):9080/v1/trace
+  selector:
+    matchLabels:
+      name: test-autogen-redis-otel-k8s
+  template:
+    metadata:
+      labels:
+        name: test-autogen-redis-otel-k8s
+    spec:
+      containers:
+      - name: test-autogen-redis-otel-k8s
+        image: docker.io/stevelsplunk/splk-python-autogen:latest
+        ports:
+        - name: redis
+          containerPort: 6379
+        env:
+        - name: SPLUNK_SERVICE_NAME
+          value: test-autogen-redis-otel-k8s
+        - name: MY_NODE_NAME
+          valueFrom:
+            fieldRef:
+              apiVersion: v1
+              fieldPath: spec.nodeName
+        - name: SPLUNK_TRACE_EXPORTER_URL
+          value: http://$(MY_NODE_NAME):9080/v1/trace
      command: [ "/bin/bash", "-c", "--" ]
      args: [ "while true; do sleep 30; done;" ]
      imagePullPolicy: Always
-  restartPolicy: Always
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: test-autogen-redis-otel-k8s
+spec:
+  selector:
+    name: test- autogen-redis-otel-k8s
+  ports:
+  - protocol: TCP
+    port: 6379
+    targetPort: 6379
