--- a/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
+++ b/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
@@ -2,6 +2,10 @@ FROM python:slim
 RUN apt-get update && \ 
     apt install -y python3-pip && \
     apt install -y redis-server && \
+    apt install -y procps && \
+    apt install -y net-tools && \
+    apt install -y curl && \
+    apt install -y netcat && \
     python3 -m pip install splunk-opentelemetry requests redis && \
     apt -y autoremove && apt-get -y autoclean && \
     export PATH="$HOME/.local/bin:$PATH" && \
@@ -10,3 +14,4 @@ RUN apt-get update && \
 WORKDIR /home/code
 EXPOSE 6379
 COPY . /home/code/
+COPY redis.conf /etc/redis/
