--- a/apm/k8s/python/tools/test-autogen.yaml
+++ b/apm/k8s/python/tools/test-autogen.yaml
@@ -1,24 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: autogentest
+  name: python-autogen-otel
 spec:
   selector:
     matchLabels:
-      name: autogentest
+      name: python-autogen-otel
   template:
     metadata:
       labels:
-        name: autogentest
+        name: python-autogen-otel
     spec:
       containers:
-      - name: autogentest
+      - name: python-autogen-otel
         image: docker.io/stevelsplunk/splk-python-autogen:latest
         ports:
         - containerPort: 6379
         env:
         - name: SPLUNK_SERVICE_NAME
-          value: autogentest
+          value: python-autogen-otel
         - name: MY_NODE_NAME
           valueFrom:
             fieldRef:
@@ -33,11 +33,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: autogentest
+  name: python-autogen-otel
 spec:
   type: ClusterIP
   selector:
-    app: autogentest
+    app: python-autogen-otel
   ports:
   - name: redis
     port: 6379
