--- a/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
+++ b/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
@@ -11,6 +11,7 @@ RUN apt-get update && \
     export PATH="$HOME/.local/bin:$PATH" && \
     splk-py-trace-bootstrap  && \
     mkdir /home/code
+ENV PYTHONUNBUFFERED true
 WORKDIR /home/code
 EXPOSE 6379
 COPY . /home/code/
