--- a/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
+++ b/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
@@ -1,6 +1,7 @@
 FROM python:slim
 RUN apt-get update && \ 
     apt install -y python3-pip && \
+    python3 -m pip install --upgrade pip && \
     apt install -y redis-server && \
     apt install -y procps && \
     apt install -y net-tools && \
