--- a/apm/k8s/python/tools/test-autogen.yaml
+++ b/apm/k8s/python/tools/test-autogen.yaml
@@ -28,8 +28,8 @@ spec:
               fieldPath: spec.nodeName
         - name: OTEL_EXPORTER_JAEGER_ENDPOINT
           value: http://$(MY_NODE_NAME):9080/v1/trace
-        command: ["/bin/sh"]
-        args: ["run-autogen.sh"]
+        command: [ "/bin/bash", "-c", "--" ]
+        args: [ "while true; do sleep 30; done;" ]
         imagePullPolicy: Always
 
 ---
