--- a/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
+++ b/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
@@ -7,7 +7,7 @@ RUN apt-get update && \
     apt install -y curl && \
     apt install -y netcat && \
     apt install -y vim && \
-    python3 -m pip install splunk-opentelemetry redis && \
+    python3 -m pip install splunk-opentelemetry opentelemetry-instrumentation-redis redis && \
     apt -y autoremove && apt-get -y autoclean && \
     export PATH="$HOME/.local/bin:$PATH" && \
     splk-py-trace-bootstrap  && \
