--- a/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
+++ b/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
@@ -2,11 +2,12 @@ FROM python:slim
 RUN apt-get update && \ 
     apt install -y python3-pip && \
     apt install -y redis-server && \
-    apt install -y procps && \
-    apt install -y net-tools && \
-    apt install -y curl && \
-    apt install -y netcat && \
-    apt install -y vim && \
+    python3 -m pip install --upgrade pip
+#   apt install -y procps && \
+#   apt install -y net-tools && \
+#   apt install -y curl && \
+#   apt install -y netcat && \
+#   apt install -y vim && \
     python3 -m pip install splunk-opentelemetry opentelemetry-instrumentation-redis redis && \
     apt -y autoremove && apt-get -y autoclean && \
     export PATH="$HOME/.local/bin:$PATH" && \
