--- a/apm/k8s/python/tools/test-autogen.yaml
+++ b/apm/k8s/python/tools/test-autogen.yaml
@@ -18,7 +18,7 @@ spec:
         - containerPort: 6379
         env:
         - name: OTEL_RESOURCE_ATTRIBUTES
-          value: otel-demo
+          value: environment=otel-demo
         - name: SPLUNK_SERVICE_NAME
           value: python-autogen-otel
         - name: MY_NODE_NAME
