--- a/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
+++ b/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
@@ -3,7 +3,11 @@ RUN apt-get update && \
     apt install -y python3-pip && \
     python3 -m pip install pip==21.0.1 && \
     apt install -y redis-server && \
-    python3 -m pip install splunk-opentelemetry opentelemetry-instrumentation-redis redis && \
+    python3 -m pip install && \
+        splunk-opentelemetry && \
+        opentelemetry-api && \
+        opentelemetry-instrumentation-redis && \
+        redis && \
     apt-get install -y ntp && \
 #   apt install -y procps && \
 #   apt install -y net-tools && \
