--- a/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
+++ b/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
@@ -1,19 +1,14 @@
 FROM python:slim
 RUN apt-get update && \
-    apt install -y python3-pip && \
-    python3 -m pip install pip==21.0.1 && \
     apt install -y redis-server && \
+    apt-get install -y ntp && \
+    apt-get install -y python3-pip && \
+    python3 -m pip install pip==21.0.1 && \
     python3 -m pip install && \
     python3 -m pip splunk-opentelemetry && \
     python3 -m pip opentelemetry-api && \
     python3 -m pip opentelemetry-instrumentation-redis && \
     python3 -m pip redis && \
-    apt-get install -y ntp && \
-#   apt install -y procps && \
-#   apt install -y net-tools && \
-#   apt install -y curl && \
-#   apt install -y netcat && \
-#   apt install -y vim && \
     apt -y autoremove && apt-get -y autoclean && \
     export PATH="$HOME/.local/bin:$PATH" && \
     splk-py-trace-bootstrap  && \
@@ -23,3 +18,9 @@ WORKDIR /home/code
 EXPOSE 6379
 COPY . /home/code/
 COPY redis.conf /etc/redis
+
+#   apt install -y procps && \
+#   apt install -y net-tools && \
+#   apt install -y curl && \
+#   apt install -y netcat && \
+#   apt install -y vim && \
