--- a/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
+++ b/apm/k8s/python/tools/dockerfile-splk-otel-python-autogen
@@ -1,19 +1,17 @@
 FROM python:slim
 RUN apt-get update && \
     apt install -y redis-server && \
-    apt-get install -y ntp && \
-    apt-get install -y python3-pip && \
+    apt install -y ntp && \
+    apt install -y python3-pip && \
     python3 -m pip install pip==21.0.1 && \
-    python3 -m pip install && \
-    python3 -m pip splunk-opentelemetry && \
-    python3 -m pip opentelemetry-api && \
-    python3 -m pip opentelemetry-instrumentation-redis && \
-    python3 -m pip redis && \
+    python3 -m pip install splunk-opentelemetry && \
+    python3 -m pip install opentelemetry-api && \
+    python3 -m pip install opentelemetry-instrumentation-redis && \
+    python3 -m pip install redis && \
     apt -y autoremove && apt-get -y autoclean && \
     export PATH="$HOME/.local/bin:$PATH" && \
-    splk-py-trace-bootstrap  && \
+    splk-py-trace-bootstrap && \
     mkdir /home/code
-ENV PYTHONUNBUFFERED true
 WORKDIR /home/code
 EXPOSE 6379
 COPY . /home/code/
