--- a/apm/k8s/python/tools/demo/dockerfile-redis
+++ b/apm/k8s/python/tools/demo/dockerfile-redis
@@ -1,4 +1,7 @@
-FROM redis
-COPY redis.conf /usr/local/etc/redis/redis.conf
-CMD [ "redis-server", "/usr/local/etc/redis/redis.conf" ]
+FROM ubuntu
+RUN apt-get update && \
+    apt install -y redis-server && \
+    apt -y autoremove && apt-get -y autoclean
 EXPOSE 6379
+COPY . /home/code/
+COPY redis.conf /etc/redis
