--- a/apm/k8s/python/tools/demo/test-redis.yaml
+++ b/apm/k8s/python/tools/demo/test-redis.yaml
@@ -4,14 +4,16 @@ metadata:
   name: pod-redis
 spec:
   containers:
-  - name: redis
+  - name: pod-redis
     image: docker.io/stevelsplunk/redis
     ports:
     - containerPort: 6379
     env:
     - name: TZ
       value: America/New_York
- 
+    command: [ "/bin/bash", "-c", "--" ]
+    args: [ "while true; do sleep 30; done;" ]
+    imagePullPolicy: Always
 ---
 apiVersion: v1
 kind: Service
