--- a/apm/k8s/python/tools/demo/redis.yaml
+++ b/apm/k8s/python/tools/demo/redis.yaml
@@ -11,6 +11,9 @@ spec:
     env:
     - name: TZ
       value: America/New_York
+    command: ["/bin/sh"]
+    args: ["run-redis.sh"]
+    imagePullPolicy: Always
  
 ---
 apiVersion: v1
