--- a/apm/k8s/python/tools/demo/dockerfile-redis
+++ b/apm/k8s/python/tools/demo/dockerfile-redis
@@ -1,7 +1,9 @@
 FROM ubuntu
 RUN apt-get update && \
     apt install -y redis-server && \
-    apt -y autoremove && apt-get -y autoclean
+    apt -y autoremove && apt-get -y autoclean && \
+    mkdir /home/code
+WORKDIR /home/code
 EXPOSE 6379
 COPY . /home/code/
 COPY redis.conf /etc/redis
