--- a/apm/k8s/python/tools/demo/redis.yaml
+++ b/apm/k8s/python/tools/demo/redis.yaml
@@ -1,20 +1,18 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: pod-redis
+  name: redis
 spec:
   containers:
   - name: redis
-    image: docker.io/stevelsplunk/redis
-    ports:
-    - containerPort: 6379
+    image: stevelsplunk/redis
     env:
     - name: TZ
       value: America/New_York
-    command: ["/bin/sh"]
-    args: ["run-redis.sh"]
-    imagePullPolicy: Always
- 
+    ports:
+    - containerPort: 6379
+    command: ["redis-server"]
+#    args: ["/etc/redis/redis.conf"]
 ---
 apiVersion: v1
 kind: Service
@@ -23,7 +21,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: pod-redis
+    app: redis
   ports:
   - name: redis
     port: 6379
