--- a/apm/k8s/python/tools/autogen/python-autogen.yaml
+++ b/apm/k8s/python/tools/autogen/python-autogen.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: pod-py-autogen-otel
+  name: py-autogen
 spec:
   containers:
-  - name: pod-py-autogen-otel
+  - name: py-autogen
     image: docker.io/stevelsplunk/splk-python-autogen
     ports:
     - containerPort: 6379
@@ -29,11 +29,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: svc-py-autogen-otel
+  name: py-autogen
 spec:
   type: ClusterIP
   selector:
-    app: pod-py-autogen-otel
+    app: py-autogen
   ports:
   - name: redis
     port: 6379
