--- a/apm/k8s/python/tools/autogen/python-autogen.yaml
+++ b/apm/k8s/python/tools/autogen/python-autogen.yaml
@@ -15,6 +15,9 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: py-autogen
+  namespace: py-autogen
+  labels:
+    app: py-autogen
 spec:
   containers:
   - name: py-autogen
