--- a/apm/k8s/python/tools/autogen/python-autogen.yaml
+++ b/apm/k8s/python/tools/autogen/python-autogen.yaml
@@ -2,13 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: py-autogen
+  labels:
+    app: py-autogen
 spec:
   type: ClusterIP
   selector:
     app: py-autogen
   ports:
-  - name: redis
-    port: 6379
+  - port: 6379
     targetPort: 6379
 ---
 apiVersion: v1
