--- a/apm/k8s/python/tools/autogen/python-autogen.yaml
+++ b/apm/k8s/python/tools/autogen/python-autogen.yaml
@@ -12,7 +12,7 @@ spec:
     - name: TZ
       value: America/New_York
     - name: OTEL_RESOURCE_ATTRIBUTES
-      value: environment=otel-demo
+      value: deployment.environment=otel-demo
     - name: SPLUNK_SERVICE_NAME
       value: python-autogen-otel
     - name: MY_NODE_NAME
